--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="main-content">
         <br>
-        <input type="text" size="10" class="main-input" oninput="checkGame(this)">
+        <input type="text" size="10" class="main-input" oninput="mainLogic(this)">
         <p class="mistake-wrapper">Mistakes Left: <span class="mistake-show">5</span></p>
         <div class="center-out">
             <p class="pi-out">3.</p>
