--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Source+Code+Pro">
     <title>Pi Test</title>
-    <link class="style" rel="stylesheet" href="style.css">
+    <link class="style" rel="stylesheet" href="style.css?v=3.2">
 </head>
 <body>
     <h1 class="header">Pi Test</h1>
